--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 1122",
+  
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -23,3 +24,4 @@
     "vite": "^4.0.0"
   }
 }
+
